--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrackIn</title>
+
+    <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 <body>
-    <h1>Hello ! Welcome to TrackIn</h1>
-    <h1>bye this is TrackIn</h1>
- <div class="main">
-    
- </div>
+    <!-- React will render -->
+    <div id="root"></div>
 </body>
 </html>
