--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>TrackIn</title>
 
     <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/images/favicon.png" />
+  <link rel="icon" type="image/png" href="/images/logo.png" />
 </head>
 <body>
     <!-- React will render -->
